--- a/nars/index.html
+++ b/nars/index.html
@@ -114,15 +114,15 @@
                선택상품 <span class="select-num">1</span> 건 </label>
             </div>
             <div class="tab-contents-body">
-              <div class="cart">
+              <div class="cart" >
                 <ul>
-                  <li>
+                  <!-- <li>
                     <label for="check"><input type="checkbox" id="check"><i class="icon icon-check"></i></label>
                     <div class="cart-image products">
                       <a href="#"><img src="img/product_swiper_1.jpg" alt="shopping"></a>
                     </div>
                     <dl class="cart-infos">
-                      <dt>듀오 아이 쉐도우 함마메트</dt>
+                      <dt >듀오 아이 쉐도우 함마메트</dt>
                       <dd>수량
                         <div class="count">
                           <button class="icon icon-minus" ></button>
@@ -136,7 +136,7 @@
                       <button class="icon icon-heart"></button>
                       <button class="icon icon-transh"></button>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="tab-contents-body">
               <div class="wish">
                 <ul>
-                  <li>
+                  <!-- <li>
                     <label for="check2"><input type="checkbox" id="check2"><i class="icon icon-check"></i></label>
                     <div class="wish-image products">
                       <a href="#"><img src="img/product_swiper_1.jpg" alt="shopping"></a>
@@ -169,7 +169,7 @@
                       <button class="icon icon-cart"></button>
                       <button class="icon icon-transh"></button>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -242,7 +242,7 @@
       <div class="wrap">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id01">
               <img src="img/product_swiper_1.jpg" alt="블러쉬오르가즘">
               <dl class="bastseller-text">
                 <dt>블러쉬<span>오르가즘</span></dt>
@@ -254,7 +254,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id02">
               <img src="img/product_swiper_2.jpg" alt="어데이셔스 립스틱 도미니크">
               <dl class="bastseller-text">
                 <dt>어데이셔스 립스틱<span>도미니크</span></dt>
@@ -266,7 +266,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id03">
               <img src="img/product_swiper_3.jpg" alt="일루미네이터오르가즘">
               <dl class="bastseller-text">
                 <dt>일루미네이터<span>오르가즘</span></dt>
@@ -278,7 +278,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide"  data-key="id04">
               <img src="img/product_swiper_4.jpg" alt="멀티플오르가즘">
               <dl class="bastseller-text">
                 <dt>멀티플<span>오르가즘</span></dt>
@@ -290,7 +290,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id05">
               <img src="img/product_swiper_5.jpg" alt="퓨어 래디언트 틴티드 모이스처라이저">
               <dl class="bastseller-text">
                 <dt>퓨어 래디언트 틴티드<br> 모이스처라이저</dt>
@@ -302,7 +302,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id06" >
               <img src="img/product_swiper_6.jpg" alt="올데이 루미너스 웨이트리스 파운데이션">
               <dl class="bastseller-text">
                 <dt>올데이 루미너스 웨이트리스<span>파운데이션</span></dt>
@@ -314,7 +314,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-key="id07" >
               <img src="img/product_swiper_7.jpg" alt="쉬어 립스틱 돌체 비타">
               <dl class="bastseller-text">
                 <dt>쉬어 립스틱<span>돌체 비타</span></dt>
@@ -326,7 +326,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide"  data-key="id08">
               <img src="img/product_swiper_8.jpg" alt="벳 매트 립 펜슬 듀오">
               <dl class="bastseller-text">
                 <dt><span>벨벳 매트 립 펜슬</span>듀오</dt>
@@ -338,7 +338,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide"  data-key="id09">
               <img src="img/product_swiper_9.jpg" alt="스파이크드 어데이셔스 립스틱">
               <dl class="bastseller-text">
                 <dt>스파이크드 어데이셔스 립스틱</dt>
