--- a/nars/index.html
+++ b/nars/index.html
@@ -154,7 +154,7 @@
                선택상품 <span class="select-num">1</span> 건 </label>
             </div>
             <div class="tab-contents-body">
-              <div class="wish">
+              <div class="wish" id="wish">
                 <ul>
                   <!-- <li>
                     <label for="check2"><input type="checkbox" id="check2"><i class="icon icon-check"></i></label>
@@ -278,7 +278,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide"  data-key="id04">
+            <div class="swiper-slide" data-key="id04">
               <img src="img/product_swiper_4.jpg" alt="멀티플오르가즘">
               <dl class="bastseller-text">
                 <dt>멀티플<span>오르가즘</span></dt>
@@ -302,7 +302,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide" data-key="id06" >
+            <div class="swiper-slide" data-key="id06">
               <img src="img/product_swiper_6.jpg" alt="올데이 루미너스 웨이트리스 파운데이션">
               <dl class="bastseller-text">
                 <dt>올데이 루미너스 웨이트리스<span>파운데이션</span></dt>
@@ -314,7 +314,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide" data-key="id07" >
+            <div class="swiper-slide" data-key="id07">
               <img src="img/product_swiper_7.jpg" alt="쉬어 립스틱 돌체 비타">
               <dl class="bastseller-text">
                 <dt>쉬어 립스틱<span>돌체 비타</span></dt>
@@ -326,7 +326,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide"  data-key="id08">
+            <div class="swiper-slide" data-key="id08">
               <img src="img/product_swiper_8.jpg" alt="벳 매트 립 펜슬 듀오">
               <dl class="bastseller-text">
                 <dt><span>벨벳 매트 립 펜슬</span>듀오</dt>
@@ -338,7 +338,7 @@
                 <button class="icon icon-cart"></button>
               </div>
             </div>
-            <div class="swiper-slide"  data-key="id09">
+            <div class="swiper-slide" data-key="id09">
               <img src="img/product_swiper_9.jpg" alt="스파이크드 어데이셔스 립스틱">
               <dl class="bastseller-text">
                 <dt>스파이크드 어데이셔스 립스틱</dt>
