--- a/nars/index.html
+++ b/nars/index.html
@@ -477,6 +477,7 @@
             </div>
           </div>
         </div>
+      </div>  
     </article>
 
     <!-- 스토어 검색영역 ========================================================  -->
