--- a/nars/index.html
+++ b/nars/index.html
@@ -169,18 +169,18 @@
                       <button class="icon icon-transh"></button>
                     </div>
                   </li> -->
-                </ul>
+                  </ul>
+                </div>
               </div>
-            </div>
-            <div class="cart-total">
-              <a href="#">선택상품주문</a>
-              <a href="#">선택상품삭제</a>
+              <div class="cart-total">
+                <a href="#">선택상품주문</a>
+                <a href="#">선택상품삭제</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      </div>
-    </nav>
+
 
     <!-- 검색창 -->
     <div class="search">
@@ -578,11 +578,11 @@
         <li><a href="#">지역변경</a></li>
       </ul>
       <ul class="sns">
-        <li><a herf="#"><i class="icon icon-utube"></i></a></li>
-        <li><a herf="#"><i class="icon icon-facebook"></i></a></li>
-        <li><a herf="#"><i class="icon icon-twiter"></i></a></li>
-        <li><a herf="#"><i class="icon icon-kakao"></i></a></li>
-        <li><a herf="#"><i class="icon icon-instar"></i></a></li>
+        <li><a href="#"><i class="icon icon-utube"></i></a></li>
+        <li><a href="#"><i class="icon icon-facebook"></i></a></li>
+        <li><a href="#"><i class="icon icon-twiter"></i></a></li>
+        <li><a href="#"><i class="icon icon-kakao"></i></a></li>
+        <li><a href="#"><i class="icon icon-instar"></i></a></li>
       </ul>
 
       <div class="bottom-area">
