--- a/nars/index.html
+++ b/nars/index.html
@@ -578,11 +578,11 @@
         <li><a href="#">지역변경</a></li>
       </ul>
       <ul class="sns">
-        <li><a href="#"><i class="icon icon-utube"></i></a></li>
-        <li><a href="#"><i class="icon icon-facebook"></i></a></li>
-        <li><a href="#"><i class="icon icon-twiter"></i></a></li>
-        <li><a href="#"><i class="icon icon-kakao"></i></a></li>
-        <li><a href="#"><i class="icon icon-instar"></i></a></li>
+        <li><a href="#" title="유투브"><i class="icon icon-utube"></i></a></li>
+        <li><a href="#" title="페이스북"><i class="icon icon-facebook"></i></a></li>
+        <li><a href="#" title="트위터"><i class="icon icon-twiter"></i></a></li>
+        <li><a href="#" title="카카오"><i class="icon icon-kakao"></i></a></li>
+        <li><a href="#" title="인스타"><i class="icon icon-instar"></i></a></li>
       </ul>
 
       <div class="bottom-area">
