--- a/nars/index.html
+++ b/nars/index.html
@@ -513,7 +513,7 @@
                 <label><input type="checkbox"><i class="icon icon-check"></i>NARS Boutique</label>
                 <label><input type="checkbox"><i class="icon icon-check"></i>Sephora</label>
               </div>
-              <button>Location Search</button>
+              <button title="지역검색">Location Search</button>
             </form>
             <!-- 나스위치찾기 주소 결과 -->
             <div class="store-result">
@@ -523,7 +523,7 @@
               <div class="result-list">
                 <ul class="active">
                   <li>
-                    <a href="#" >
+                    <a href="#" title="신세계">
                       <b>SHINSEGAE - SSG YEONGDEUNGPO (1.32km)</b>
                       <p>1f 9 Yeongjung-Ro<br> Yeongdeungpo-Gu Seoul,<br> 07305 82226394173</p>
                     </a>
@@ -531,7 +531,7 @@
                 </ul>
                 <ul>
                   <li>
-                    <a href="#">
+                    <a href="#" title="갤러리아">
                       <b>GALLERIA WEST DEPT STORE (10.38 Km)</b>
                       <p>1f 343 Apgujeong-Dong
                       Gangnam-Gu <br>
@@ -543,7 +543,7 @@
                 </ul>
                 <ul>
                   <li>
-                    <a href="#">
+                    <a href="#" title="현대백화점">
                       <b>HYUNDAI MIA (14.20 Km)</b>
                       <p>1f 315 Dongsomun-Ro
                         Seongbuk-Gu
