--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -8,13 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+	<script src="js/jquery.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
 
 	<header>
-
+		<h1 class="blind">로고</h1>
 		<div class="wrapper">
 			<h1><a href="#" class="logo"><img src="img/logo.png" alt="starbucks"/> </a></h1>
 			<nav>
@@ -32,6 +32,7 @@
 	</header><!-- End Header -->
 
 	<section class="billboard">
+		<h2 class="blind">메인이미지</h2>
 		<section class="caption caption_wrap">
 			<p class="cap_title">Introducing the Starbucks<br> Rewards™ Visa® Card</p>
 			<p class="cap_desc">Enjoy more of what you love. Earn Stars — that add up to food and drink <br>Rewards — everywhere you make purchases.</p>
@@ -104,6 +105,7 @@
 
 
 	<section class="subscription">
+		<h2 class="blind">로그인</h2>
 		<div class="wrapper">
 			<p class="title">스타벅스에 가입하세요</p>
 			<p class="desc">가입을 통해 리워드 혜택을 즐세요.</p>
@@ -114,6 +116,7 @@
 
 
 	<section class="social">
+		 <h2 class="blind">sns연결</h2>
 			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"></a>
 			<a href="http://twitter.com/pixelhint" target="_blank" class="t"></a>
 			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"></a>
