--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -34,6 +34,7 @@
 	<section class="billboard">
 		<h2 class="blind">메인이미지</h2>
 		<section class="caption caption_wrap">
+			<h3 class="blind">메인 글</h3>
 			<p class="cap_title">Introducing the Starbucks<br> Rewards™ Visa® Card</p>
 			<p class="cap_desc">Enjoy more of what you love. Earn Stars — that add up to food and drink <br>Rewards — everywhere you make purchases.</p>
 			<a href="#">LEARN MORE <i></i></a>
