--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -137,11 +137,11 @@
 
 	<div id="lightbox"></div>
 	<div id="box">
-		<a href="#" class="close"></a>
-		<form method="post" action="">
-			<input type="text" id="email" placeholder="Email" title="email"/>
-			<input type="text" id="name" placeholder="Name" title="name"/>
-			<input type="submit" id="submit" value="SIGN IN"/>
+		<a href="#" class="close" title="로그인"></a>
+		<form method="post" action="#">
+			<input type="text" id="email" placeholder="Email" title="email">
+			<input type="text" id="name" placeholder="Name" title="name">
+			<input type="submit" id="submit" value="SIGN IN" title="로그인">
 			<a href="#">JOIN NOW</a>
 		</form>
 	</div>
