--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -66,16 +66,16 @@
 		<h3 class="S_title">New Drink</h3>
 
 		<div class="work">
-			<a href="#" class="work_img">
+			<a href="#" class="work_img" title="Nitro Cold Brew">
 				<img src="img/coffee1.jpg" alt="" title=""/>
 			</a>
-			<a href="#" class="work_title">
+			<a href="#" class="work_title" >
 				Nitro Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img">
+			<a href="#" class="work_img" title="Vanilla Cream Cold Brew">
 				<img src="img/coffee2.jpg" alt=""/>
 			</a>
 			<a href="#" class="work_title">
@@ -84,7 +84,7 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img">
+			<a href="#" class="work_img" title="Cold Brew">
 				<img src="img/coffee3.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
@@ -93,7 +93,7 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img">
+			<a href="#" class="work_img" title="Cold Brew Latte">
 				<img src="img/coffee4.jpg" alt="" title=""/>
 			</a>
 			<a href="#" class="work_title">
@@ -110,7 +110,7 @@
 		<div class="wrapper">
 			<p class="title">스타벅스에 가입하세요</p>
 			<p class="desc">가입을 통해 리워드 혜택을 즐세요.</p>
-			<a href="#" class="start_btn">SIGN IN</a>
+			<a href="#" class="start_btn" title="로그인버튼">SIGN IN</a>
 		</div>
 	</section><!-- End subscription -->
 
@@ -118,10 +118,10 @@
 
 	<section class="social">
 		 <h2 class="blind">sns연결</h2>
-			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"></a>
-			<a href="http://twitter.com/pixelhint" target="_blank" class="t"></a>
-			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"></a>
-			<a href="#" target="_blank" class="g"></a>
+			<a href="http://facebook.com/pixelhint" target="_blank" class="fb" title="페이스북"></a>
+			<a href="http://twitter.com/pixelhint" target="_blank" class="t" title="트위터"></a>
+			<a href="http://dribbble.com/pixelhint" target="_blank" class="d" title="드리블"></a>
+			<a href="#" target="_blank" class="g" title="g"></a>
 	</section><!-- End social -->
 
 
@@ -137,12 +137,12 @@
 
 	<div id="lightbox"></div>
 	<div id="box">
-		<a href="#" class="close" title="로그인"></a>
+		<a href="#" class="close" title="로그인팝업"></a>
 		<form method="post" action="#">
 			<input type="text" id="email" placeholder="Email" title="email">
 			<input type="text" id="name" placeholder="Name" title="name">
 			<input type="submit" id="submit" value="SIGN IN" title="로그인">
-			<a href="#">JOIN NOW</a>
+			<a href="#" title="회원가입">JOIN NOW</a>
 		</form>
 	</div>
 </body>
