--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -66,37 +66,37 @@
 		<h3 class="S_title">New Drink</h3>
 
 		<div class="work">
-			<a href="#" class="work_img" title="Nitro Cold Brew">
+			<a href="#" class="work_img" title="나이트로콜드브루">
 				<img src="img/coffee1.jpg" alt="" title=""/>
 			</a>
-			<a href="#" class="work_title" >
+			<a href="#" class="work_title" title="나이트로콜드브루">
 				Nitro Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="Vanilla Cream Cold Brew">
+			<a href="#" class="work_img" title="바닐라콜드브루">
 				<img src="img/coffee2.jpg" alt=""/>
 			</a>
-			<a href="#" class="work_title">
+			<a href="#" class="work_title" title="바닐라콜드브루">
 				Vanilla Cream Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="Cold Brew">
+			<a href="#" class="work_img" title="콜드브루">
 				<img src="img/coffee3.jpg" alt="" title=""/>
 			</a>
-			<a href="#" class="work_title">
+			<a href="#" class="work_title" title="콜드브루">
 				Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="Cold Brew Latte">
+			<a href="#" class="work_img" title="콜드브루라떼">
 				<img src="img/coffee4.jpg" alt="" title=""/>
 			</a>
-			<a href="#" class="work_title">
+			<a href="#" class="work_title" title="콜드브루라떼">
 				Cold Brew Latte
 				<i></i>
 			</a>
@@ -118,10 +118,10 @@
 
 	<section class="social">
 		 <h2 class="blind">sns연결</h2>
-			<a href="http://facebook.com/pixelhint" target="_blank" class="fb" title="페이스북"></a>
-			<a href="http://twitter.com/pixelhint" target="_blank" class="t" title="트위터"></a>
-			<a href="http://dribbble.com/pixelhint" target="_blank" class="d" title="드리블"></a>
-			<a href="#" target="_blank" class="g" title="g"></a>
+			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"><span class="blind">페이스북</span></a>
+			<a href="http://twitter.com/pixelhint" target="_blank" class="t" ><span class="blind">트위터</span></a>
+			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"><span class="blind">드리블</span></a>
+			<a href="#" target="_blank" class="g"><span class="blind">구글</span></a>
 	</section><!-- End social -->
 
 
@@ -137,7 +137,7 @@
 
 	<div id="lightbox"></div>
 	<div id="box">
-		<a href="#" class="close" title="로그인팝업"></a>
+		<a href="#" class="close"><span class="blind">로그인팝업창</span></a>
 		<form method="post" action="#">
 			<input type="text" id="email" placeholder="Email" title="email">
 			<input type="text" id="name" placeholder="Name" title="name">
