--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -67,7 +67,7 @@
 
 		<div class="work">
 			<a href="#" class="work_img" title="나이트로콜드브루">
-				<img src="img/coffee1.jpg" alt="" title=""/>
+				<img src="img/coffee1.jpg" alt="">
 			</a>
 			<a href="#" class="work_title" title="나이트로콜드브루">
 				Nitro Cold Brew
@@ -85,7 +85,7 @@
 		</div>
 		<div class="work">
 			<a href="#" class="work_img" title="콜드브루">
-				<img src="img/coffee3.jpg" alt="" title=""/>
+				<img src="img/coffee3.jpg" alt="">
 			</a>
 			<a href="#" class="work_title" title="콜드브루">
 				Cold Brew
@@ -94,7 +94,7 @@
 		</div>
 		<div class="work">
 			<a href="#" class="work_img" title="콜드브루라떼">
-				<img src="img/coffee4.jpg" alt="" title=""/>
+				<img src="img/coffee4.jpg" alt="">
 			</a>
 			<a href="#" class="work_title" title="콜드브루라떼">
 				Cold Brew Latte
