--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -66,37 +66,37 @@
 		<h3 class="S_title">New Drink</h3>
 
 		<div class="work">
-			<a href="#" class="work_img" title="나이트로콜드브루">
+			<a href="#" class="work_img" >
 				<img src="img/coffee1.jpg" alt="">
 			</a>
-			<a href="#" class="work_title" title="나이트로콜드브루">
+			<a href="#" class="work_title" >
 				Nitro Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="바닐라콜드브루">
+			<a href="#" class="work_img" >
 				<img src="img/coffee2.jpg" alt=""/>
 			</a>
-			<a href="#" class="work_title" title="바닐라콜드브루">
+			<a href="#" class="work_title">
 				Vanilla Cream Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="콜드브루">
+			<a href="#" class="work_img" >
 				<img src="img/coffee3.jpg" alt="">
 			</a>
-			<a href="#" class="work_title" title="콜드브루">
+			<a href="#" class="work_title">
 				Cold Brew
 				<i></i>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="콜드브루라떼">
+			<a href="#" class="work_img" >
 				<img src="img/coffee4.jpg" alt="">
 			</a>
-			<a href="#" class="work_title" title="콜드브루라떼">
+			<a href="#" class="work_title">
 				Cold Brew Latte
 				<i></i>
 			</a>
