--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -66,7 +66,7 @@
 		<h3 class="S_title">New Drink</h3>
 
 		<div class="work">
-			<a href="#" class="work_img" >
+			<a href="#" class="work_img" title="nitro">
 				<img src="img/coffee1.jpg" alt="">
 			</a>
 			<a href="#" class="work_title" >
@@ -75,7 +75,7 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" >
+			<a href="#" class="work_img" title="vanilla">
 				<img src="img/coffee2.jpg" alt=""/>
 			</a>
 			<a href="#" class="work_title">
@@ -84,7 +84,7 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" >
+			<a href="#" class="work_img" title="cold">
 				<img src="img/coffee3.jpg" alt="">
 			</a>
 			<a href="#" class="work_title">
@@ -93,7 +93,7 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" >
+			<a href="#" class="work_img" title="coldbrew">
 				<img src="img/coffee4.jpg" alt="">
 			</a>
 			<a href="#" class="work_title">
