--- a/starbucks-test/index.html
+++ b/starbucks-test/index.html
@@ -66,7 +66,8 @@
 		<h3 class="S_title">New Drink</h3>
 
 		<div class="work">
-			<a href="#" class="work_img" title="nitro">
+			<a href="#" class="work_img">
+				<span class="blind">나이트로</span>
 				<img src="img/coffee1.jpg" alt="">
 			</a>
 			<a href="#" class="work_title" >
@@ -75,7 +76,8 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="vanilla">
+			<a href="#" class="work_img">
+				<span class="blind">바닐라크림콜드브루</span>
 				<img src="img/coffee2.jpg" alt=""/>
 			</a>
 			<a href="#" class="work_title">
@@ -84,7 +86,8 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="cold">
+			<a href="#" class="work_img">
+				<span class="blind">콜드브루</span>
 				<img src="img/coffee3.jpg" alt="">
 			</a>
 			<a href="#" class="work_title">
@@ -93,7 +96,8 @@
 			</a>
 		</div>
 		<div class="work">
-			<a href="#" class="work_img" title="coldbrew">
+			<a href="#" class="work_img">
+				<span class="blind">콜드브루라떼</span>
 				<img src="img/coffee4.jpg" alt="">
 			</a>
 			<a href="#" class="work_title">
