--- a/nars/index.html
+++ b/nars/index.html
@@ -109,7 +109,7 @@
           <div id="tab1">
             <!-- 모두선택하기 체크박스  -->
             <div class="select">
-              <label for="select-all"><input type="checkbox" id="select-all"><i class="icon icon-check"></i>
+              <label for="select-all"><input type="checkbox" id="select-all" name="shoppin"><i class="icon icon-check"></i>
                선택상품 <span class="select-num">1</span> 건 </label>
             </div>
             <div class="tab-contents-body">
