--- a/nars/index.html
+++ b/nars/index.html
@@ -245,7 +245,7 @@
               <img src="img/product_swiper_1.jpg" alt="블러쉬오르가즘">
               <dl class="bastseller-text">
                 <dt>블러쉬<span>오르가즘</span></dt>
-                <dd>나스의 아이코닉 블러쉬 쉐이드입니다<br>자연스러운 컬러로 건강하고 생기 있는 치크를 연출해보세요</dd>
+                <dd>나스의 아이코닉 블러쉬 쉐이드입니다 자연스러운 컬러로 건강하고 생기 있는 치크를 연출해보세요</dd>
                 <dd>₩ 40,000</dd>
               </dl>
               <div class="btn-group">
@@ -257,7 +257,7 @@
               <img src="img/product_swiper_2.jpg" alt="어데이셔스 립스틱 도미니크">
               <dl class="bastseller-text">
                 <dt>어데이셔스 립스틱<span>도미니크</span></dt>
-                <dd>드라마틱한 입체감<br>멈출 수 없는 개성</dd>
+                <dd>드라마틱한 입체감 멈출 수 없는 개성</dd>
                 <dd>₩ 41,000</dd>
               </dl>
               <div class="btn-group">
@@ -269,7 +269,7 @@
               <img src="img/product_swiper_3.jpg" alt="일루미네이터오르가즘">
               <dl class="bastseller-text">
                 <dt>일루미네이터<span>오르가즘</span></dt>
-                <dd>자연스럽게 밝은 톤의 피부를 만들어<br> 주는 일루미네이터</dd>
+                <dd>자연스럽게 밝은 톤의 피부를 만들어 주는 일루미네이터</dd>
                 <dd>₩ 41,000</dd>
               </dl>
               <div class="btn-group">
@@ -281,7 +281,7 @@
               <img src="img/product_swiper_4.jpg" alt="멀티플오르가즘">
               <dl class="bastseller-text">
                 <dt>멀티플<span>오르가즘</span></dt>
-                <dd>치크, 입술, 바디에 모두 사용할 수 있는 <br>멀티유즈 스틱입니다</dd>
+                <dd>치크, 입술, 바디에 모두 사용할 수 있는 멀티유즈 스틱입니다</dd>
                 <dd>₩ 55,000</dd>
               </dl>
               <div class="btn-group">
@@ -292,8 +292,8 @@
             <div class="swiper-slide" data-key="id05">
               <img src="img/product_swiper_5.jpg" alt="퓨어 래디언트 틴티드 모이스처라이저">
               <dl class="bastseller-text">
-                <dt>퓨어 래디언트 틴티드<br> 모이스처라이저</dt>
-                <dd>투명한 컬러막을 형성하며 <br>자외선을 차단해 줍니다</dd>
+                <dt>퓨어 래디언트 틴티드 모이스처라이저</dt>
+                <dd>투명한 컬러막을 형성하며 자외선을 차단해 줍니다</dd>
                 <dd>₩ 63,000</dd>
               </dl>
               <div class="btn-group">
