--- a/nars/index.html
+++ b/nars/index.html
@@ -305,7 +305,7 @@
               <img src="img/product_swiper_6.jpg" alt="올데이 루미너스 웨이트리스 파운데이션">
               <dl class="bastseller-text">
                 <dt>올데이 루미너스 웨이트리스<span>파운데이션</span></dt>
-                <dd>놀라울 정도로 자연스러운 <br>커버력과 공기처럼 가벼운 밀착력</dd>
+                <dd>놀라울 정도로 자연스러운 커버력과 공기처럼 가벼운 밀착력</dd>
                 <dd>₩ 67,000</dd>
               </dl>
               <div class="btn-group">
@@ -317,7 +317,7 @@
               <img src="img/product_swiper_7.jpg" alt="쉬어 립스틱 돌체 비타">
               <dl class="bastseller-text">
                 <dt>쉬어 립스틱<span>돌체 비타</span></dt>
-                <dd>은은하게 빛나는 컬러 피그먼트와 반투명한<br> 포뮬러가 결합되어 세련된 광택을 선사합니다</dd>
+                <dd>은은하게 빛나는 컬러 피그먼트와 반투명한 포뮬러가 결합되어 세련된 광택을 선사합니다</dd>
                 <dd>₩ 37,000</dd>
               </dl>
               <div class="btn-group">
@@ -329,7 +329,7 @@
               <img src="img/product_swiper_8.jpg" alt="벳 매트 립 펜슬 듀오">
               <dl class="bastseller-text">
                 <dt><span>벨벳 매트 립 펜슬</span>듀오</dt>
-                <dd>강렬한 컬러 반짝이는 스타일 그리고 <br>강렬함과 펜슬의 편리함. 두 배로 예뻐지세요</dd>
+                <dd>강렬한 컬러 반짝이는 스타일 그리고 강렬함과 펜슬의 편리함. 두 배로 예뻐지세요</dd>
                 <dd>₩ 42,000</dd>
               </dl>
               <div class="btn-group">
@@ -341,7 +341,7 @@
               <img src="img/product_swiper_9.jpg" alt="스파이크드 어데이셔스 립스틱">
               <dl class="bastseller-text">
                 <dt>스파이크드 어데이셔스 립스틱</dt>
-                <dd>스터드가 담긴 사랑 리미티드 에디션 쉐이드로 <br>강렬한 스타일을 연출하세요.</dd>
+                <dd>스터드가 담긴 사랑 리미티드 에디션 쉐이드로 강렬한 스타일을 연출하세요.</dd>
                 <dd>₩ 41,000</dd>
               </dl>
               <div class="btn-group">
