--- a/nars/index.html
+++ b/nars/index.html
@@ -97,7 +97,7 @@
       </ul>
     </nav>
       <!-- 탭메뉴 -->
-      <div class="center">
+    <div class="center">
         <div class="tab-menu active">
         <h2 class="blind">장바구니, 위시리스트</h2>
         <ul class="tab-nav">
@@ -110,32 +110,12 @@
             <!-- 모두선택하기 체크박스  -->
             <div class="select">
               <label for="select-all"><input type="checkbox" id="select-all" name="shoppin"><i class="icon icon-check"></i>
-               선택상품 <span class="select-num">1</span> 건 </label>
+               선택상품 <span class="select-num"></span> 건 </label>
             </div>
             <div class="tab-contents-body">
               <div class="cart" >
                 <ul>
-                  <!-- <li>
-                    <label for="check"><input type="checkbox" id="check"><i class="icon icon-check"></i></label>
-                    <div class="cart-image products">
-                      <a href="#"><img src="img/product_swiper_1.jpg" alt="shopping"></a>
-                    </div>
-                    <dl class="cart-infos">
-                      <dt >듀오 아이 쉐도우 함마메트</dt>
-                      <dd>수량
-                        <div class="count">
-                          <button class="icon icon-minus" ></button>
-                          <span class="num">1</span>
-                          <button class="icon icon-plus"></button>
-                        </div>
-                      </dd>
-                      <dd>가격 : <span>43,000</span>원</dd>
-                    </dl>
-                    <div class="btn-group">
-                      <button class="icon icon-heart"></button>
-                      <button class="icon icon-transh"></button>
-                    </div>
-                  </li> -->
+                  <p class="nonecart">장바구니에 상품이 없습니다.</p>
                 </ul>
               </div>
             </div>
@@ -150,36 +130,23 @@
           <div id="tab2">
             <div class="select">
               <label for="select-all2"><input type="checkbox" id="select-all2"><i class="icon icon-check"></i>
-               선택상품 <span class="select-num">1</span> 건 </label>
+               선택상품 <span class="select-num"></span> 건 </label>
             </div>
             <div class="tab-contents-body">
               <div class="wish" id="wish">
                 <ul>
-                  <!-- <li>
-                    <label for="check2"><input type="checkbox" id="check2"><i class="icon icon-check"></i></label>
-                    <div class="wish-image products">
-                      <a href="#"><img src="img/product_swiper_1.jpg" alt="shopping"></a>
-                    </div>
-                    <dl class="cart-infos">
-                      <dt>듀오 아이 쉐도우 함마메트</dt>
-                      <dd>가격 : <span>43,000</span>원</dd>
-                    </dl>
-                    <div class="btn-group">
-                      <button class="icon icon-cart"></button>
-                      <button class="icon icon-transh"></button>
-                    </div>
-                  </li> -->
-                  </ul>
-                </div>
+                  <p class="nonewish">Wish List 상품이 없습니다.</p>
+                </ul>
               </div>
-              <div class="cart-total">
-                <a href="#">선택상품주문</a>
-                <a href="#">선택상품삭제</a>
-              </div>
+            </div>
+            <div class="cart-total">
+              <a href="#">선택상품주문</a>
+              <a href="#">선택상품삭제</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
 
     <!-- 검색창 -->
