--- a/nars/index.html
+++ b/nars/index.html
@@ -109,7 +109,7 @@
           <div id="tab1">
             <!-- 모두선택하기 체크박스  -->
             <div class="select">
-              <label for="select-all"><input type="checkbox" id="select-all" name="shoppin"><i class="icon icon-check"></i>
+              <label for="cart-all"><input type="checkbox" id="cart-all" name="shoppin"><i class="icon icon-check"></i>
                선택상품 <span class="select-num"></span> 건 </label>
             </div>
             <div class="tab-contents-body">
@@ -129,7 +129,7 @@
         <!--wish -->
           <div id="tab2">
             <div class="select">
-              <label for="select-all2"><input type="checkbox" id="select-all2"><i class="icon icon-check"></i>
+              <label for="wish-all"><input type="checkbox" id="wish-all"><i class="icon icon-check"></i>
                선택상품 <span class="select-num"></span> 건 </label>
             </div>
             <div class="tab-contents-body">
