--- a/hanhui-po/index.html
+++ b/hanhui-po/index.html
@@ -11,7 +11,8 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
+		<script src="https://www.powr.io/powr.js?external-type=html"></script>
+	  <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -112,26 +113,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<div class="powr-form-builder" id="73c54b2c_1550473126"></div>
 								<ul class="icons">
 									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
@@ -156,5 +138,6 @@
       <script src="js/util.js"></script>
       <script src="js/main.js"></script>
 			<script src="js/jquery.scrollbar.js"></script>
+
 	</body>
 </html>
